Add renewable mining template leases
